@@ -155,19 +155,23 @@ public class FileTxnSnapLog {
         case OpCode.createSession:
             sessions.put(hdr.getClientId(),
                     ((CreateSessionTxn) txn).getTimeOut());
-            ZooTrace.logTraceMessage(LOG,ZooTrace.SESSION_TRACE_MASK,
-                    "playLog --- create session in log: "
-                            + Long.toHexString(hdr.getClientId())
-                            + " with timeout: "
-                            + ((CreateSessionTxn) txn).getTimeOut());
+            if (LOG.isTraceEnabled()) {
+                ZooTrace.logTraceMessage(LOG,ZooTrace.SESSION_TRACE_MASK,
+                        "playLog --- create session in log: "
+                                + Long.toHexString(hdr.getClientId())
+                                + " with timeout: "
+                                + ((CreateSessionTxn) txn).getTimeOut());
+            }
             // give dataTree a chance to sync its lastProcessedZxid
             dt.processTxn(hdr, txn);
             break;
         case OpCode.closeSession:
             sessions.remove(hdr.getClientId());
-            ZooTrace.logTraceMessage(LOG,ZooTrace.SESSION_TRACE_MASK,
-                    "playLog --- close session in log: "
-                            + Long.toHexString(hdr.getClientId()));
+            if (LOG.isTraceEnabled()) {
+                ZooTrace.logTraceMessage(LOG,ZooTrace.SESSION_TRACE_MASK,
+                        "playLog --- close session in log: "
+                                + Long.toHexString(hdr.getClientId()));
+            }
             dt.processTxn(hdr, txn);
             break;
         default:
